# sqlalchemy_app

./: LICENSE
sql_alch/: pyproject.toml
sql_alch/sql_alch/: alembic.ini  hello.py  main.py  models.py  my_select.py  seed.py
sql_alch/sql_alch/alembic/: env.py
sql_alch/sql_alch/alembic/versions/: 4b6b1ad78e0e_first_rev.py
sql_alch/sql_alch/settings/: .env  db.py  secret.py
